--- a/style.css
+++ b/style.css
@@ -25,16 +25,19 @@ input{
     padding: 20px;
     margin: 10px;
     border-radius: 10px;
+    border: 1px solid #000;
 }
 .btn-validate{
     background-color: green;
     font-size: 20px;
     font-weight: bold;
-    text-transform: uppercase
+    text-transform: uppercase;
+    border:none;
 }
 .btn-reset{
     background-color: red;
     font-size: 20px;
     font-weight: bold;
-    text-transform: uppercase
+    text-transform: uppercase;
+    border:none;
 }
